--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Teste</title>
+    <title>BullDoG</title>
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Feito um teste</h1>
+    <h1>Loki o BullDoG</h1>
+    <img src="images/bulldog.jpg" />
   </body>
 </html>
